# nlp100-python

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.md  QUESTION.md  TASK.md
.github/workflows/: ci.yml
nlp100/: chapter01.py
nlp100/helpers/: string_helper.py
tests/: test_chapter01.py
tests/helpers/: test_string_helper.py
