[tool.poetry]
name = "nlp100-python"
version = "0.1.0"
description = "Practice of Programming Python"
authors = ["noranuko13"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
