[project]
name = "nlp100-python"
version = "0.1.0"
description = "Practice of Programming Python"
authors = [{ name = "noranuko13" }]
requires-python = ">=3.13,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "mypy>=1.15.0,<2",
    "flake8>=7.2.0,<8",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
